# ratnas-nightmare

./: .gitignore  README.md  bot_template.py  bots.py  chess_ui.py  custom_bot.py  game_manager.py  game_recorder.py  game_replayer.py  maia1900_bot.py  main.py  model.py  pyproject.toml  ratnas_nightmare.py  requirements.txt  secure_bot.py  settings.py  submission.txt
game_saves/: MaiaBot-1900_vs_Gemini SmartBot_2026-03-14T17-15-31-798979.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-13T12-35-04-400506.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-13T12-58-05-879240.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-13T13-03-04-732156.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-13T13-04-37-524748.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-13T13-04-44-369933.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-13T13-04-53-337507.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-13T13-04-59-754140.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-14T16-08-31-518902.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-14T16-09-18-247160.json  Pacifist Bot_vs_Gemini SmartBot_2026-03-14T16-10-16-628630.json
training/: config.py  dataset.py  train.py
